# rust-selfsimilar

./: Cargo.toml  README.md
src/: lib.rs
